--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script>
     async function initLIFF() {
-      await liff.init({ liffId: "YOUR_LIFF_ID" });
+      await liff.init({ liffId: "2007774059-A0qJR1Gw" });
       if (!liff.isLoggedIn()) {
         liff.login();
       } else {
