--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 </head>
 <body>
-  <h1>ようこそ！</h1>
+  <h1>スタディPCネット板宿校</h1>
   <p id="username">ログイン情報を取得しています…</p>
   <a href="reserve.html">予約ページへ進む</a>
 
