--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    @import url("style.css");
-  </style>
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="style.css">
   <title>予約アプリ - トップ</title>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script src="sw.js"></script>
