スタイルの設定

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
   <h1>スタディPCネット板宿校</h1>
   <p id="username">ログイン情報を取得しています…</p>
+
+  レッスンの予約が可能です。
   <a href="reserve.html">予約ページへ進む</a>
 
   <script>
