--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             "Content-Type": "application/json"
           }
         })
+        .then(response => {
+          if (!response.ok) {
+            throw new Error("サーバーエラー: " + response.status);
+          }
+          return response.text(); // または response.json()
+        })
         .then(res => res.text())
         .then(msg => console.log("登録結果:", msg))
         .catch(err => {
