--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           method: "POST",
           body: JSON.stringify(userData),
           headers: {
-            "Content-Type": "application/json"
+            "Content-Type": "text/plain"
           }
         })
         .then(response => {
