--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>スタディPCネット板宿校</h1>
-  <h2>レッスン予約アプリ0.04</h2>
+  <h2>レッスン予約アプリ0.05</h2>
   <p id="username">ログイン情報を取得しています…</p>
 
   レッスンの予約が可能です。
@@ -26,6 +26,8 @@
       } else {
         const profile = await liff.getProfile();
 
+        const rawToken = liff.getIDToken();
+        console.log("生トークン:", rawToken);
         setTimeout(() => {
           const idToken = liff.getDecodedIDToken();
           if (!idToken) {
