--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>スタディPCネット板宿校</h1>
-  <h2>レッスン予約アプリ0.06</h2>
+  <h2>レッスン予約アプリ0.07</h2>
   <p id="username">ログイン情報を取得しています…</p>
 
   レッスンの予約が可能です。
@@ -20,7 +20,8 @@
 
   <script>
     async function initLIFF() {
-      await liff.init({ liffId: "2007774059-A0qJR1Gw" });
+      await liff.init({ liffId: "2007774059-A0qJR1Gw" , withLoginProcess: true});
+      
       if (!liff.isLoggedIn()) {
         liff.login();
       } else {
