--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>スタディPCネット板宿校</h1>
-  <h2>レッスン予約アプリ0.093</h2>
+  <h2>レッスン予約アプリ0.094</h2>
   <p id="username">ログイン情報を取得しています…</p>
 
   レッスンの予約が可能です。
@@ -34,7 +34,7 @@
         method: "POST",
         body: JSON.stringify({name:displayName}),
         headers: {
-          "Content-Type": "application/json"
+          "Content-Type": "text/plain"
         }
       })
       .then(res => res.text()) 
