--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>スタディPCネット板宿校</h1>
-  <h2>レッスン予約アプリ0.095</h2>
+  <h2>レッスン予約アプリ0.096</h2>
   <p id="username">ログイン情報を取得しています…</p>
 
   レッスンの予約が可能です。
@@ -41,6 +41,13 @@
       .then(data => {
         const userId = data.userId;
         console.log("取得したID:", userId);
+
+        //ローカルストレージに保存
+        localStorage.setItem("appUserId", userId);
+        console.log("IDをローカルに保存しました");
+
+        // このIDを使って次の処理へ（例：予約画面に進む）
+        proceedToReservation(userId);
       })
       .then(msg => {
         console.log("登録結果:", msg);
