--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>スタディPCネット板宿校</h1>
-  <h2>レッスン予約アプリ0.096</h2>
+  <h2>レッスン予約アプリ0.097</h2>
   <p id="username">ログイン情報を取得しています…</p>
 
   レッスンの予約が可能です。
@@ -47,7 +47,14 @@
         console.log("IDをローカルに保存しました");
 
         // このIDを使って次の処理へ（例：予約画面に進む）
-        proceedToReservation(userId);
+        const savedId = localStorage.getItem("appUserId");
+        if (savedId) {
+          console.log("登録済みID:", savedId);
+          // proceedToReservation(savedId); // 登録済み → フォームスキップ
+        } else {
+          // showRegistrationForm(); // 初回と判定 → 登録画面を表示
+        }
+
       })
       .then(msg => {
         console.log("登録結果:", msg);
