--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       })
       .then(res => res.json()) 
       .then(data => {
-        const userId = data.userId;
-        console.log("取得したID:", userId);
+        // const userId = data.userId;
+        // console.log("取得したID:", userId);
 
         //ローカルストレージに保存
         // localStorage.setItem("appUserId", userId);
