--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>スタディPCネット板宿校</h1>
-  <h2>レッスン予約アプリ0.0992</h2>
+  <h2>レッスン予約アプリ0.0993</h2>
   <p id="username">ログイン情報を取得しています…</p>
 
   レッスンの予約が可能です。
@@ -30,7 +30,7 @@
       const profile = await liff.getProfile();
       const displayName = profile.displayName;
 
-      const saveId = localStorage.getItem("appUserId");
+      const savedId = localStorage.getItem("appUserId");
       if (savedId){
         console.log("登録済みID:", saveedId);
         widow.location.href = "reserve.html";
