--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       const savedId = localStorage.getItem("appUserId");
       if (savedId){
         console.log("登録済みID:", savedId);
-        widow.location.href = "reserve.html";
+        window.location.href = "reserve.html";
         return;         
       }
 
