--- a/reserve.html
+++ b/reserve.html
@@ -6,7 +6,7 @@
   <title>予約フォーム</title>
 </head>
 <body>
-  <h2>予約フォーム ver. 0.004</h2>
+  <h2>予約フォーム ver. 0.005</h2>
   <form id="reserveForm">
     <label>日付: <input type="date" name="date" id="datePicker" required></label><br>
     
@@ -25,6 +25,8 @@
         const date = this.value;
         const res = await fetch(`${scriptURL}?date=${date}`);
         const reservedTimes = await res.json();
+
+        alert(reservedTimes);
 
         const allTimes = ["10:00", "11:00", "14:00", "15:00", "16:00"];
         const available = allTimes.filter(t => !reservedTimes.includes(t));
