--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.css" rel="stylesheet">
   <style>
-    body { margin: 40px 10px; padding: 0; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; }
+    body { font-family: Arial, Helvetica Neue, Helvetica, sans-serif; }
     #calendar { max-width: 900px; margin: 0 auto; }
   </style>
 
