--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>StudyPC.net</h1>
   <h2>板宿校</h2>
 
-  <p id="username">ログイン情報を取得しています…</p>
+  <!-- <p id="username">ログイン情報を取得しています…</p> -->
 
   レッスンの予約・キャンセルが可能です。
 
@@ -75,7 +75,7 @@
 </div>
 
   <footer>
-    <small>レッスン予約アプリ0.0996</small>
+    <small>レッスン予約アプリ0.0997</small>
   </footer>
   </body>
 </html>
