--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     var calendarEl = document.getElementById('calendar');
     var calendar = new FullCalendar.Calendar(calendarEl, {
       initialView: 'dayGridMonth',
+      expandRows: false,
       height:'auto',
       contentHeight:'auto',
       locale:'ja',
@@ -75,7 +76,7 @@
 </div>
 
   <footer>
-    <small>レッスン予約アプリ0.0997</small>
+    <small>レッスン予約アプリ0.0998</small>
   </footer>
   </body>
 </html>
