--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         // arg.date は Date オブジェクト
         return arg.date.getDate(); // 数字だけを返す
       },
-      // events: [
-      //   { title: '予約あり', start: '2025-12-02', color: 'red' },
-      //   { title: '予約あり', start: '2025-12-05', color: 'blue' }
-      // ]
+      events: [
+        { title: '予約あり', start: '2025-12-02', color: 'red' },
+        { title: '予約あり', start: '2025-12-05', color: 'blue' }
+      ]
 
 
       events: async function(fetchInfo, successCallback, failureCallback) {
