--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <h1>StudyPC.net</h1>
-  <h2>板宿校</h2>
+  <h2 id="schoolname">板宿校</h2>
 
   <!-- <p id="username">ログイン情報を取得しています…</p> -->
 
@@ -76,7 +76,7 @@
 </div>
 
   <footer>
-    <small>レッスン予約アプリ0.0999</small>
+    <small>レッスン予約アプリ0.1</small>
   </footer>
   </body>
 </html>
