--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         return arg.date.getDate(); // 数字だけを返す
       },
       events: [
-        { title: '予約あり', start: '2025-12-02', color: 'red' },
-        { title: '予約あり', start: '2025-12-05', color: 'blue' }
+        { title: '予約済', start: '2025-12-02', color: 'red' },
+        { title: '予約済', start: '2025-12-05', color: 'blue' }
       ]
 
 
