--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <!-- <a href="reserve.html">予約ページへ進む</a> -->
 
-  モーダル部分
+  <!-- モーダル部分 -->
 <div class="modal fade" id="reservationModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
