--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
 
       fetch("https://script.google.com/macros/s/AKfycbz49vcGe_8hmXS6uvghjFszJnSrmeTCauYs__CkQdbauV0Em_co_R-Cm6p0DWPAtlB8YA/exec", {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
+        // headers: { "Content-Type": "application/json" },
+        headers: {"Content-Type": "text/plain"},
         body: JSON.stringify(data)
       })
       .then(res => res.text())
