--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 
       // テスト用データ
       const data = {
-        date: "2025/12/20",
-        time: "18:00",
-        name: "やまだ",
+        date: `${date}`,
+        time: `${time}`,
+        name: `${name}`,
         course: "I"
       };
 
