--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       // テスト用データ
       const data = {
         date: `${date}`,
-        time: `${time}`,
+        time: `${selected}`,
         name: `${name}`,
         course: "I"
       };
