--- a/member.html
+++ b/member.html
@@ -40,7 +40,7 @@
     </select> 
   </div>
 
-  <button class="res">予　約</button>
+  <button class="res">登　録</button>
   <button class="res">キャンセル</button>
   </div>
 
