--- a/member.html
+++ b/member.html
@@ -28,7 +28,7 @@
 
   <h3 id="schoolname">会員登録</h3>
 
-  <div class="mb-3">
+  <div class="memberSet">
     <label for="memberName" class="form-label">名前</label>
     <input type="text" class="form-control" id="memberName">
 
