--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
       // テスト用データ
       const data = {
+        type: "RESERVATION", 
         date: `${date}`,
         time: `${selected}`,
         name: `${name}`,
