--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
   レッスンの予約・キャンセルが可能です。
 
-  <div class="resdiv">
+  <!-- <div class="resdiv">
   <button class="res">予　約</button>
   <button class="res">キャンセル</button>
-  </div>
+  </div> -->
 
   <pre id="output"></pre>
 
@@ -364,8 +364,17 @@
 </script>
 
 <div>
-<h3>今月の予約状況</h3>
-
+  <h3>今月の予約状況</h3>
+  <dl>
+    <dt>今月のレッスン回数</dt><dd>8 + 前月からの繰越1</dd>
+    <dt>今月の残りコマ数</dt><dd></dd>
+    <dt>予約可能回数</dt><dd>4</dd>
+    <dt>予約状況</dt>
+      <dd>
+        1月12日　13:00 , 14:00 <br>
+        1月18日　13:00 , 14:00 <br>
+      </dd>
+  </dl>  
 </div>
 
   <footer>
