--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
   // });
 </script>
 
-<div>
+<div id="reserve-status">
   <h3>今月の予約状況</h3>
   <dl>
     <dt>今月のレッスン回数</dt><dd>8 + 前月からの繰越1</dd>
