--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   <h3>今月の予約状況</h3>
   <dl>
     <dt>今月のレッスン回数：</dt><dd>8 + 前月からの繰越1</dd>
-    <dt>今月の残りコマ数：</dt><dd></dd>
+    <dt>今月の残りコマ数：</dt><dd>5</dd>
     <dt>予約可能回数：</dt><dd>4</dd>
     <dt>予約状況：<br></dt>
       <dd>
