--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 </head>
 <body>
-  <h1>StudyPC.net</h1>
-  <h2 id="schoolname">板宿校</h2>
+  <h1>StudyPC.net　　<font id="schoolname">板宿校</font></h1>
+  
 
 
   レッスンの予約・キャンセルが可能です。
