--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-  <h1>StudyPC.net　　<font id="schoolname">板宿校</font></h1>
+  <h1>StudyPC.net　<font id="schoolname">板宿校</font></h1>
   
 
 
@@ -378,7 +378,7 @@
 </div>
 
   <footer>
-    <small>レッスン予約アプリ0.13</small>
+    <small>(C)K.O. 2026-  レッスン予約アプリ0.13</small>
   </footer>
   </body>
 </html>
