--- a/index.html
+++ b/index.html
@@ -369,8 +369,9 @@
     <dt>今月のレッスン回数：</dt><dd>8 + 前月からの繰越1</dd>
     <dt>今月の残りコマ数：</dt><dd>5</dd>
     <dt>予約可能回数：</dt><dd>4</dd>
-    <dt>予約状況：<br></dt>
+    <dt>予約状況：</dt>
       <dd>
+        <br>
         1月12日　13:00 , 14:00 <br>
         1月18日　13:00 , 14:00 <br>
       </dd>
