--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="manifest" href="manifest.json">
   <title>予約アプリ - トップ</title>
   <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
+  <script src="auth.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="sw.js"></script>
   
@@ -26,8 +27,20 @@
   <h1>StudyPC.net　<font id="schoolname">板宿校</font></h1>
   
 
+  <div id="auth-section">
 
-  レッスンの予約・キャンセルが可能です。
+    <p>お名前と生年月日を入力してください。</p>
+    <label for="input_name" class="form-label">名前</label>
+    <input type="text" class="form-control" id="input_name">
+    <label for="input_birth" class="form-label">生年月日（8桁の数字 (例)19950218）</label>
+    <input type="text" class="form-control" id="input_birth">
+    <button type="button" onclick="login()">認証</button>
+
+
+  </div>
+
+  <div id="reserve-section">
+  <div id="welcome-msg"></div>
 
   <!-- <div class="resdiv">
   <button class="res">予　約</button>
@@ -363,20 +376,22 @@
   // });
 </script>
 
-<div id="reserve-status">
-  <h3>今月の予約状況</h3>
-  <dl>
-    <dt>今月のレッスン回数：</dt><dd>8 + 前月からの繰越1</dd>
-    <dt>今月の残りコマ数：</dt><dd>5</dd>
-    <dt>予約可能回数：</dt><dd>4</dd>
-    <dt>予約状況：</dt>
-      <dd>
-        <br>
-        1月12日　13:00 , 14:00 <br>
-        1月18日　13:00 , 14:00 <br>
-      </dd>
-  </dl>  
-</div>
+    <div id="reserve-status">
+      <h3>今月の予約状況</h3>
+      <dl>
+        <dt>今月のレッスン回数：</dt><dd>8 + 前月からの繰越1</dd>
+        <dt>今月の残りコマ数：</dt><dd>5</dd>
+        <dt>予約可能回数：</dt><dd>4</dd>
+        <dt>予約状況：</dt>
+          <dd>
+            <br>
+            1月12日　13:00 , 14:00 <br>
+            1月18日　13:00 , 14:00 <br>
+          </dd>
+      </dl>  
+    </div>
+
+  </div>
 
   <footer>
     <small>(C)K.O. 2026-  レッスン予約アプリ0.13</small>
