--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <label class="form-label">予約する時間を選んでください</label>
             <div id="timeSlots"><!-- 動的に挿入される部分 --></div>
           </div>
+          <div>
+            要確認の枠は直接LINE、電話でお問い合わせください。
+          </div>
+
           <div class="mb-3">
             <label for="reservationName" class="form-label">名前</label>
             <input type="text" class="form-control" id="reservationName">
